MEECROWAVE-82 better validation to activate bval
git-svn-id: https://svn.apache.org/repos/asf/openwebbeans/meecrowave/trunk@1816168 13f79535-47bb-0310-9956-ffa450edef68